اعمال تغییرات بهینه 140409080802

--- a/ShamsAlShamoos01.Client/Client/ShamsAlShamoos01.Client.Client.csproj
+++ b/ShamsAlShamoos01.Client/Client/ShamsAlShamoos01.Client.Client.csproj
@@ -11,7 +11,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.22" PrivateAssets="all" />
 		<PackageReference Include="Syncfusion.Blazor" Version="27.1.48" />
 	</ItemGroup>
-	
+	<PropertyGroup>
+  <StaticWebAssetUseHash>true</StaticWebAssetUseHash>
+</PropertyGroup>
+
 	<ItemGroup>
 		<ProjectReference Include="..\..\ShamsAlShamoos01.Shared\ShamsAlShamoos01.Shared.csproj" />
 
