--- a/ShamsAlShamoos01.Infrastructure/ShamsAlShamoos01.Infrastructure.csproj
+++ b/ShamsAlShamoos01.Infrastructure/ShamsAlShamoos01.Infrastructure.csproj
@@ -19,6 +19,8 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
+		<PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
+		<PackageReference Include="OpenCvSharp4.runtime.win" Version="4.11.0.20250507" />
 	</ItemGroup>
 
 	<ItemGroup>
