--- a/ShamsAlShamoos03.Client/Client/ShamsAlShamoos03.Client.Client.csproj
+++ b/ShamsAlShamoos03.Client/Client/ShamsAlShamoos03.Client.Client.csproj
@@ -9,7 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.22" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.22" PrivateAssets="all" />
-		<PackageReference Include="MudBlazor" Version="8.0.0" />
+		<PackageReference Include="Radzen.Blazor" Version="9.0.6" />
 		<PackageReference Include="Syncfusion.Blazor" Version="27.1.48" />
 	</ItemGroup>
 	<PropertyGroup>
